src/sass/sections/_contact-section.scss
@use '../base/vars';
@use '../base/colors';
@use '../base/mixins';

.contact-section {
  flex-basis: 50%;
  margin-left: vars.$left-margin;
  margin-right: vars.$right-margin;
}


.form-control {
  position: relative;
  display: flex;
  flex-direction: column;
  margin-bottom: 1rem;

  &__error {
    display: flex;
    color: #fd1892;
    padding-bottom: 1rem;
    align-items: center;
    justify-content: center;
    text-align: center;

    & p {
      max-width: 22rem;
    }
  }

  & textarea,
  input {
    outline: none;
    transition: all 150ms ease;
    border-width: 2px;
    background: none;
    
  }

  :not(:last-child) {
    margin-bottom: 0.5rem;
  }

  &__group {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    position: relative;

    & input+label,
    input+label {
      position: absolute;
      top: 12px;
      color: black;
      z-index: 5;
      padding: 0px 9px;
      transition: top 150ms ease;
    }

    & input:focus~label,
    input:not(:placeholder-shown)~label,
    textarea:not(:placeholder-shown)~label,
    textarea:focus~label {
      position: absolute;
      top: -12px;
      background-color: black;
      border-radius: 20px;
      z-index: 5;
      transform: scale(0.75);
    }

    & textarea+label,
    textarea+label {
      position: absolute;
      top: 3rem;
      color: black;
      z-index: 5;
      padding: 0px 9px;
      transition: top 210ms ease;
    }
  }

  &__input {
    width: 100%;
    border-radius: 1.5rem;
    padding: 1rem;
    opacity: 0.7;
    transition: opacity 250ms ease-in-out;
    height: 3rem;
    text-align: center;

    &:hover {
      opacity: 1;
    }
  }

  &--textarea {
    height: 8rem;
  }
}


@include mixins.md {
  .form-control {
    margin-bottom: 3rem;
  }
}

.btn {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 1rem;
  color: white;
  border-radius: 4rem;
  padding: 0.65rem;
  border: none;
  border-bottom: 6px solid rgb(64, 64, 64);
  background-color: rgb(18, 18, 18);
  transition: all 200ms ease-out;
  cursor: pointer;

  &:focus,
  &:hover {
    outline: none;
    margin: 0.25rem 0.25rem;
    border: 2px solid #7c7c7c;
    border-bottom-color: rgb(0, 0, 0);
    border-bottom-width: 3px;
    margin-top: 3px;
  }

  &:active {
    border-bottom-color: rgb(110, 110, 110);
    margin: 0.5rem 0.5rem;
  }

  &--sm {
    border: none;
    padding: 0.25rem .5rem;
    font-size: 0.75rem;
    margin-top: 0.5rem;

    &:hover,
    &:focus {
      margin: 0;
      margin-top: 0.5rem;
      border: none;
      background-color: #b827fc;
    }

    &:active {
      margin: 0;
    }
  }
}

input:focus~.c1 {
  color: colors.$accent-1;
}

.c1>input:focus {
  color: rgb(73, 73, 73);
  border: 2px solid colors.$accent-1;
}

input:focus~.c2 {
  color: colors.$accent-2;
}

.c2>input:focus {
  color: rgb(73, 73, 73);
  border: 2px solid colors.$accent-2;
}

textarea:focus~.c3 {
  color: colors.$accent-3;
}

.c3>textarea:focus {
  color: rgb(73, 73, 73);
  border: 2px solid colors.$accent-3;
}


.success {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;

  &__inner {
    position: absolute;
    top: -20px;
    transition: all 200ms ease-out;
    border-radius: 20px;
    padding-bottom: 2rem;
    display: grid;
    margin-bottom: 2rem;
    background-color: white;
    place-items: center;
    text-align: center;
    min-height: 350px;
    width: 100%;
    border-width: 2px;
    border-style: solid;
    border-color: #e3a7ff;
    color: gray;
    font-size: 0.85rem;
    z-index: 100;
    transform: translateY(0%);
  }

  &__grid {
    display: grid;
    place-items: center;
  }


  &__emoji {
    font-size: 2.25rem;
  }
}

.translateX180 {
  transform: translateX(-200%);
}

.translateX0 {
  transform: translateX(0%);
}

